# niv_ai

./: .gitignore  BUG_FIX_SUMMARY.md  BUG_REPORT_35.md  BUG_STATUS.md  CHANGELOG.md  DEVELOPER.md  INSTALL.md  KNOWN_ISSUES.md  MANIFEST.in  MCP_TOOLS_IMPLEMENTATION_PLAN.md  NBFC_TEST_RESULTS.md  NIV_AI_AUDIT_REPORT.md  NIV_AI_COMPLETE_ARCHITECTURE.md  NIV_AI_DEVELOPER_EVOLUTION_PLAN.md  NIV_AI_IMPROVEMENT_PLAN.md  NIV_AI_ROADMAP.md  NIV_AI_V1_RELEASE_PLAN.md  README.md  SETUP_GUIDE.md  TESTING_RESULTS.md  TEST_RESULTS.md  benchmark_results.json  check_settings.py  dump_prompt.py  get_fields.py  license.txt  package.json  playwright.config.js  pyproject.toml  requirements.txt  setup.py  setup.sh  system_prompt_dump.txt  temp_index_new.py  test_a2a.py
.github/workflows/: ci.yml
docker/: README.md  nginx-patch.sh  restart.ps1  startup.sh
docs/: A2A_MASTER_PLAN.html  A2A_MASTER_PLAN.md  A2A_WORKFLOW.md  ADK_COMPLETE_STUDY.md  NIV_ARTIFACTS_PHASE0_PLAN.md  convert_to_html.py  generate_book.js  niv_ai_book.html
docs/reading/: 01_ADK_Multi_Agents.md  02_ADK_Session_State.md
e2e/: README.md  chat.spec.js  features.spec.js  global-setup.js
e2e/.auth/: .gitignore
mobile/: App.js  app.json  package.json
niv_ai/: __init__.py  commands.py  hooks.py  install.py  modules.txt  niv_health.py  test_agent.py
niv_ai/fixtures/: niv_credit_plan.json  niv_system_prompt.json
niv_ai/niv_billing/api/: admin.py  billing.py  payment.py
niv_ai/niv_core/: agent.py  compat.py  discovery.py  enable_a2a.py  mcp_client.py  test_a2a.py  trigger_engine.py
niv_ai/niv_core/a2a/: __init__.py  config.py  runner.py
niv_ai/niv_core/adk/: agent_factory.py  chart_prototype.html  db_check.py  discovery.py  final_test.py  stream_handler.py
niv_ai/niv_core/api/: _helpers.py  artifacts.py  automation.py  cache_monitor.py  chat.py  chat.py.bak_mar13  chat_v2.py  conversation.py  export.py  form_guide.py  health.py  health.py.bak  instructions.py  knowledge.py  mcp.py  mobile.py  mobile_self_pair.py  oauth.py  scheduler.py  simple.py  smart_fill.py  stream.py  stream_v2.py  telegram.py  voice.py  voice.py.bak_0404  voice_stream.py  whatsapp.py
niv_ai/niv_tools/: fac_adapter.py
niv_ai/public/: manifest.json
niv_ai/tests/: test_mcp_reliability.py
scripts/: deploy_production.sh  fac_v14_compat.sh  keepalive_ping.py  validate_before_deploy.py
(+172 files in other folders)
